# daopad

./: .gitignore  .ic-assets.json5  ALEXANDRIA_INTEGRATION.md  CLAUDE.md  CLAUDE.md.old  Cargo.toml  FRONTEND_IMPLEMENTATION_PLAN.md  HACKATHON_SUBMISSION.md  IMPLEMENTATION_PLAN_ADD_OPERATORS.md  KONGSWAP_REGISTRATION.md  LP_LOCKER_PRINCIPAL_VERIFICATION_PLAN.md  LP_LOCKING_FALLBACK_PLAN.md  LP_LOCKING_FRONTEND_SOLUTION.md  LP_LOCKING_IMPLEMENTATION.md  LP_LOCKING_REDESIGN.md  LP_TOKEN_LOCKING_PLAN.md  MULTI_DAO_PLAN.md  Makefile  ORBIT_INTEGRATION.md  ORBIT_TYPES_AND_INTERFACES.md  ORBIT_USER_REGISTRATION_PLAN.md  README.md  SUBACCOUNT_LP_LOCKING_MVP.md  SUBACCOUNT_LP_LOCKING_PLAN.md  canister_ids.json  deploy.sh  deploy_testnet.sh  dfx.json  dfx_new.json  package-lock.json  package.json  plan.md  test-orbit-variant.js  test-variant2.mjs  test-variant3.mjs  test-variant4.mjs  test-variant5.mjs  test-variant6.mjs  test_kong_response.sh  test_local.sh  (+4 more)
src/daopad/daopad_backend/: Cargo.toml  README.md  daopad_backend.did
src/daopad/daopad_backend/src/: lib.rs  orbit_integration.rs
src/daopad/daopad_backend/src/api/: address_book.rs  agreement_snapshot.rs  dao_transition.rs  equity.rs  governance_config.rs  kong_locker.rs  mod.rs  operating_agreement.rs  orbit.rs  orbit_accounts.rs  orbit_assets.rs  orbit_canisters.rs  orbit_overview.rs  orbit_permissions.rs  orbit_requests.rs  orbit_security.rs  orbit_transfers.rs  orbit_users.rs  proposals.rs  stations.rs  utils.rs  voting_permissions.rs
src/daopad/daopad_backend/src/api/security/: admin_checks.rs  governance_checks.rs  mod.rs  security_utils.rs  system_checks.rs  treasury_checks.rs
src/daopad/daopad_backend/src/client/: mod.rs  orbit_client.rs
src/daopad/daopad_backend/src/kong_locker/: mod.rs  registration.rs  tokens.rs  voting.rs
src/daopad/daopad_backend/src/orbit/: management.rs  mod.rs  station.rs
src/daopad/daopad_backend/src/proposals/: mod.rs  orbit_link.rs  orbit_requests.rs  storage.rs  treasury.rs  types.rs  unified.rs  voting.rs
src/daopad/daopad_backend/src/storage/: memory.rs  mod.rs  state.rs
src/daopad/daopad_backend/src/types/: governance.rs  kong_locker.rs  mod.rs  orbit.rs  storage.rs
src/daopad/daopad_backend/src/types/orbit/: mod.rs
src/daopad/daopad_backend/src/utils/: mod.rs
src/icpi/src/icpi_backend/: Cargo.toml  icpi_backend.did
src/icpi/src/icpi_backend/src/: balance_tracker.rs  burning.rs  icpi_token.rs  icrc_types.rs  index_state.rs  kong_locker.rs  kongswap.rs  ledger_client.rs  lib.rs  lib.rs.backup  minting.rs  mod.rs  precision.rs  tvl_calculator.rs  types.rs
src/icpi/src/icpi_backend/src/1_CRITICAL_OPERATIONS/: mod.rs
src/icpi/src/icpi_backend/src/2_CRITICAL_DATA/: mod.rs
src/icpi/src/icpi_backend/src/3_KONG_LIQUIDITY/: mod.rs
src/icpi/src/icpi_backend/src/4_TRADING_EXECUTION/: mod.rs
src/icpx/: Cargo.toml  ICPX_PLAN.md  README.md  dfx.json
src/icpx/src/: icpx_backend.did  lib.rs
src/icpx/src/1_CRITICAL_OPERATIONS/: mod.rs
src/icpx/src/1_CRITICAL_OPERATIONS/burning/: mod.rs
src/icpx/src/1_CRITICAL_OPERATIONS/minting/: mod.rs
src/icpx/src/1_CRITICAL_OPERATIONS/rebalancing/: mod.rs
src/icpx/src/2_CRITICAL_DATA/: mod.rs
src/icpx/src/2_CRITICAL_DATA/portfolio_value/: balance_aggregator.rs  mod.rs  value_calculator.rs
src/icpx/src/2_CRITICAL_DATA/supply_tracker/: mod.rs  supply_queries.rs  supply_validator.rs
src/icpx/src/2_CRITICAL_DATA/token_queries/: mod.rs
src/icpx/src/2_CRITICAL_DATA/validation/: mod.rs
src/icpx/src/3_KONG_LIQUIDITY/: mod.rs
src/icpx/src/4_TRADING_EXECUTION/: mod.rs
src/icpx/src/5_INFORMATIONAL/: mod.rs  portfolio_display.rs
src/icpx/src/6_INFRASTRUCTURE/: constants.rs  error_types.rs  math_utils.rs  mod.rs  types.rs
src/kong-locker-reference/kong_locker/: Cargo.toml  kong_locker.did  lock_canister.wasm
src/kong-locker-reference/kong_locker/src/: query.rs  storage.rs
src/kong_locker/lp_locking/: Cargo.toml  lp_locking.did
src/kong_locker/lp_locking/src/: lib.rs  query.rs  revshare.rs  types.rs  update.rs
src/lp_locking/: Cargo.toml  lp_locking.did
src/lp_locking/src/: lib.rs
(+1037 files in other folders)
