[package]
name = "icpx_backend"
version = "2.0.0"
edition = "2021"
authors = ["ICPX Team"]
description = "Security-first ICPX backend canister"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
# IC SDK
ic-cdk = "0.13"
ic-cdk-macros = "0.9"
ic-cdk-timers = "0.7"

# Candid
candid = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"

# Async runtime
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.35", features = ["macros", "rt", "time"] }

# Math and precision
rust_decimal = { version = "1.33", features = ["serde-with-str"] }
rust_decimal_macros = "1.33"
num-bigint = "0.4"
num-traits = "0.2"

# Utilities
hex = "0.4"
sha2 = "0.10"
lazy_static = "1.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
rstest = "0.18"

[profile.release]
lto = true
opt-level = 3
overflow-checks = true

[features]
default = []
test-mode = []

[workspace]