[package]
name = "lp_locking"
version = "1.0.0"
authors = ["DAOPad Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-traits = "0.2"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[dev-dependencies]