[package]
name = "daopad_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.10", features = ["value"] }
ic-cdk = "0.17"
ic-stable-structures = "0.6"
serde = "1.0"
serde_json = "1.0"
