[package]
name = "kong_locker"
version = "1.0.0"
authors = ["DAOPad Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.18"
ic-cdk = "0.17.2"
ic-cdk-macros = "0.17.2"
ic-cdk-timers = "0.10"
ic-stable-structures = "0.6"
icrc-ledger-types = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]