[package]
name = "lp_locking"
version = "1.0.0"
authors = ["DAOPad Team"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.15"
ic-cdk-macros = "0.15"
ic-cdk-timers = "0.9"
ic-stable-structures = "0.6"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]