[package]
name = "icpi_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
ic-stable-structures = "0.6"
num-traits = "0.2"
num-bigint = "0.4"
num = "0.4"
futures = "0.3"
